# gifcut

./: .gitignore  README.md  README_cn.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  omggif.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FrameTimeline.tsx  GifPlayer.tsx  LanguageSwitcher.tsx
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
